# pandoc-to-anki

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  default.nix  flake.nix  hie.yaml  markdown-to-anki.cabal  pyproject.toml  shell.nix
app/: AddWords.hs  Anki.hs  AnkiNote.hs  Cli.hs  Lib.hs  Main.hs  TranslateWord.hs  Words.hs
docs/: doc.md
markdown_to_anki/: gen.py
models/: basic-v1.json
scripts/: format.hs
src/: AnkiMain.hs  Lib.hs  Main.hs  RenderMain.hs  config.rs  export.rs  main.rs  pandoc.rs
testdata/: config-pandoc.json  pandoc.json
tests/: 02.md  cd1b7f2c.md  macros.md  test_01.md
