[package]
name = "pandoc-to-anki"
version = "0.1.0-dev"
edition = "2021"
publish = false

[dependencies]
anki = { path = "externals/anki/rslib", package = "anki" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
pandoc_ast = "0.8.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
tokio = { version = "1", features = ["io-util"] }
