[tool.poetry]
name = "markdown_to_anki"
version = "0.1.0"
description = ""
authors = ["wrvsrx <wrvsrx@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandoc = "^2.2"
genanki = "^0.13.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[tool.poetry.scripts]
markdown_to_anki_gen = 'markdown_to_anki.gen:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
